# zellij-tools

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE.md  README.md  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.md  other-issues.md
.github/workflows/: lint.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
src/: config.rs  events.rs  focus.rs  lib.rs  main.rs  message.rs  pipe_claim.rs  stable_tabs.rs  tree.rs
src/scratchpad/: config.rs  list.rs  mod.rs  persistence.rs  registry.rs
