[workspace]
members = [".", "cli"]
resolver = "2"

[package]
name = "zellij-tools"
version = "0.2.0"
authors = ["Maddison Hellstrom <hi@maddison.io>"]
edition = "2021"
license = "MIT"
rust-version = "1.85"

[lib]
name = "zellij_tools"
path = "src/lib.rs"

[[bin]]
name = "zellij-tools"
path = "src/main.rs"

[dependencies]
kdl = "4.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zellij-tile = "0.43"
zellij-tile-utils = "0.43"
