[package]
name = "zellij-tools-cli"
version = "0.3.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "zellij-tools"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
